# trifinger_cameras

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  doc_mainpage.rst  package.xml  pyproject.toml  setup.py
.github/workflows/: style_checker.yml
calibration/: camera180_extrinsics.json  camera300_extrinsics.json  camera60_extrinsics.json  charuco_board.py  ros_detect_board.py  utils.py
calibration_data/: extrinsic_calibration.md  intrinsic_calibration.json
calibration_data/calibration_board/: README.md
cmake/: cfg_extras.cmake.in
config/: camera180.yaml  camera300.yaml  camera60.yaml  camera_calibration_180.yaml  camera_calibration_300.yaml  camera_calibration_60.yaml  default.yaml  intrinsic_calibration.yaml  pylon_camera_settings.txt
config/camera_calibration_trifingerone/: camera180_cropped.yml  camera180_cropped_and_downsampled.yml  camera180_full.yml  camera300_cropped.yml  camera300_cropped_and_downsampled.yml  camera300_full.yml  camera60_cropped.yml  camera60_cropped_and_downsampled.yml  camera60_full.yml
demos/: demo_camera.py  demo_tricamera.py
doc/: breathing_cat.toml  configuration.rst  demos.rst  executables.rst  hdf5_log_files.rst  installation.rst  pylon.rst  pylon_camera_settings.rst  troubleshooting.rst
include/trifinger_cameras/: camera_observation.hpp  camera_parameters.hpp  cereal_cvmat.hpp  opencv_driver.hpp  parse_yml.h  pybind_opencv.hpp  pybullet_tricamera_driver.hpp  pylon_camera_settings.hpp  pylon_driver.hpp  settings.hpp  tricamera_driver.hpp  tricamera_logger.hpp  tricamera_observation.hpp
launch/: cameras.launch  detect_charuco_board.launch  tf_cameras.launch
nodes/: detect_charuco_board
python/trifinger_cameras/: __init__.py  calibrate_cameras.py  camera_calibration_file.py  charuco_board_handler.py  hdf5.py  utils.py
python/trifinger_cameras/tools/: tricamera_log_extract.py
scripts/: analyze_tricamera_log.py  calibrate_cameras.py  calibrate_trifingerpro_cameras.py  camera_log_viewer.py  charuco_board.py  check_camera_sharpness.py  convert_to_camera_pose.py  detect_aruco_marker.py  overlay_camera_stream.py  overlay_real_and_rendered_images.py  record_image_dataset.py  record_tricamera_log.py  rodrigues_to_quaternion.py  single_camera_backend.py  tricamera_backend.py  tricamera_create_dataset.py  tricamera_log_converter.py  tricamera_log_extract.py  tricamera_log_to_hdf5.py  tricamera_log_viewer.py  tricamera_monitor_rate.py  tricamera_test_connection.py  verify_calibration.py
src/: camera_observation.cpp  camera_parameters.cpp  load_camera_config_test.cpp  opencv_driver.cpp  parse_yml.cpp  pybullet_tricamera_driver.cpp  pylon_camera_settings.cpp  pylon_driver.cpp  pylon_dump_camera_settings.cpp  pylon_list_cameras.cpp  pylon_write_device_user_id_to_camera.cpp  settings.cpp  tricamera_driver.cpp  tricamera_logger.cpp  tricamera_observation.cpp
srcpy/: py_camera_types.cpp  py_tricamera_types.cpp
tests/: camera_calib.yml  test_camera_calibration_file.py  test_camera_observation.cpp  test_serialize_cvmat.cpp  test_settings.cpp  test_shared_memory_camera_data.cpp  test_utils.py
