<?xml version="1.0"?>
<package format="2">
    <name>trifinger_cameras</name>
    <version>0.1.0</version>
    <description>
        Drivers, configuration, tools, etc. for the cameras of the TriFinger
        platform.
    </description>

    <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>

    <license>BSD 3-clause</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roslib</depend>
    <depend>pybind11_catkin</depend>
    <depend>robot_interfaces</depend>
    <depend>serialization_utils</depend>
    <depend>sensor_msgs</depend>
    <depend>yaml_cpp_catkin</depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>tf</exec_depend>

    <exec_depend>python-numpy</exec_depend>
    <exec_depend>python-opencv</exec_depend>

    <exec_depend>pylon_camera</exec_depend>

    <test_depend>rosunit</test_depend>

    <export>
    </export>
</package>
