<?xml version="1.0"?>
<package format="2">
    <name>trifinger_cameras</name>
    <version>0.1.0</version>
    <description>
        Drivers, configuration, tools, etc. for the cameras of the TriFinger
        platform.
    </description>

    <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>

    <license>BSD 3-clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>pybind11_vendor</buildtool_depend>

    <build_depend>mpi_cmake_modules</build_depend>

    <depend>ament_index_cpp</depend>
    <depend>pybind11</depend>
    <depend>libcereal-dev</depend>
    <depend>robot_interfaces</depend>
    <depend>serialization_utils</depend>
    <depend>yaml_utils</depend>
    <depend>sensor_msgs</depend>

    <exec_depend>ament_index_python</exec_depend>
    <exec_depend>tf</exec_depend>

    <exec_depend>python-numpy</exec_depend>
    <exec_depend>python-scipy</exec_depend>
    <exec_depend>python-opencv</exec_depend>

    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
